--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -469,17 +469,20 @@
     }
 
     .swipe {
-        height: 60vh;
+        width: 100%;
+        height: 43vh;
         padding-left: 0;
     }
     .swipe:hover{
-        padding-left: 30px;
+        padding-left: 6px;
         transition: 1s;
     }
 
     .swipe-1 {
-        width: 90%;
+        height: 100%;
+        width: 100%;
         margin-left: 0;
+        /* background-color: red; */
     }
 
     .swipe-1 h1 {
@@ -492,7 +495,7 @@
 
     .btn {
         width: 100%;
-        height: 45px;
+        height: 35px;
         margin: 10px 0;
         justify-content: center;
         padding: 10px;
