--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -428,8 +428,9 @@
 
     .logo-1{
         width: 100%;
-        height: 100px;
+        height: 50px;
         display: flex;
+        background-color: red;
         align-items: center;
         justify-content: center;
         border-right: none;
@@ -496,6 +497,7 @@
     .btn {
         width: 100%;
         height: 35px;
+        font-size: 10px;
         margin: 10px 0;
         justify-content: center;
         padding: 10px;
