--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -430,7 +430,7 @@
         width: 100%;
         height: 50px;
         display: flex;
-        background-color: red;
+        /* background-color: red; */
         align-items: center;
         justify-content: center;
         border-right: none;
@@ -471,7 +471,7 @@
 
     .swipe {
         width: 100%;
-        height: 43vh;
+        height: 45vh;
         padding-left: 0;
     }
     .swipe:hover{
@@ -487,7 +487,7 @@
     }
 
     .swipe-1 h1 {
-        font-size: 40px;
+        font-size: 31px;
     }
 
     .swipe-1 h3 {
@@ -500,7 +500,7 @@
         font-size: 10px;
         margin: 10px 0;
         justify-content: center;
-        padding: 10px;
+        padding: 8px;
     }
 
     .Discover{
